--- a/rollup-demo/package.json
+++ b/rollup-demo/package.json
@@ -10,7 +10,8 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
-    "build": "rollup --config"
+    "build": "rollup --config",
+    "start": "rollup -c -w"
   },
   "keywords": [],
   "author": "",
